added download instructions

--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -25,7 +25,10 @@
     "\n",
     "model = KeyedVectors.load_word2vec_format('GensimVectors/GoogleNews-vectors-negative300.bin', binary=True)\n",
     "# will have to download GoogleNews-vectors-negative300.bin yourself.\n",
-    "# lol don't do this\n",
+    "# wget -c \"https://s3.amazonaws.com/dl4j-distribution/GoogleNews-vectors-negative300.bin.gz\"\n",
+    "# also available via link here https://mccormickml.com/2016/04/12/googles-pretrained-word2vec-model-in-python/\n",
+    "\n",
+    "# lol don't do this unless space isn't an issue takes roughly 9gb\n",
     "#model.save_word2vec_format('GensimVectors/GoogleNews-vectors-negative300.txt', binary=False)\n"
    ]
   },
